--- a/bitschange-client/src/App.css
+++ b/bitschange-client/src/App.css
@@ -1,28 +1,32 @@
 .App {
+  height: 100vh;
+}
+
+.navbar {
+  background-color: darkblue;
+  color: white;
+  height: 40px;
+  font-size: 2em;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.login-page {
+  height: 100vh;
+  padding-top: 30vh;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.login-box {
+  width: 20%;
+  margin: auto;
+  padding: 40px;
+  border-radius: 4px;
+  background-color: lightblue;
 }
 
-.App-title {
-  font-size: 1.5em;
+.login-box > div {
+  padding: 10px;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+input {
+  float: right;
 }
