Style login for mobile

--- a/bitschange-client/src/App.css
+++ b/bitschange-client/src/App.css
@@ -12,11 +12,12 @@
 
 .login-page {
   height: 100vh;
-  padding-top: 30vh;
+  padding-top: 20vh;
 }
 
 .login-box {
   width: 30%;
+  min-width: 200px;
   margin: auto;
   padding: 3em;
   border-radius: 1em;
